fix translation conflict

--- a/backend/src/gosa/backend/data/templates/i18n/group-posix/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/group-posix/de.json
@@ -5,7 +5,7 @@
   "Edit members": "Mitglieder bearbeiten",
   "Given name": "Vorname",
   "Description": "Beschreibung",
-  "Name": "Nachname",
+  "Surname": "Nachname",
   "Members": "Mitglieder",
   "Group name": "Gruppen Name",
   "Login ID": "Anmelde ID",
