run update_catalog

--- a/backend/src/gosa/backend/data/templates/i18n/country/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/country/de.json
@@ -1,5 +1,6 @@
 {
-  "Generic": "Allgemein",
   "Country": "Land",
-  "Name": "Name" 
+  "Description": null,
+  "Generic": "Allgemein",
+  "Name": "Name"
 }
