--- a/backend/src/gosa/backend/data/templates/i18n/domaincomponent/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/domaincomponent/de.json
@@ -1,5 +1,6 @@
 {
-  "Generic": "Allgemein",
+  "Description": null,
   "Domain Component": "Domänen-Objekt-Klasse",
+  "Generic": "Allgemein",
   "Name": "Name"
 }
