--- a/backend/src/gosa/backend/data/templates/i18n/domaincomponent/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/domaincomponent/en.json
@@ -1,6 +1,7 @@
 {
+  "Description": null,
+  "Domain Component": null,
   "DomainComponent": null,
   "Generic": null,
-  "Domain Component": null,
   "Name": null
 }
