--- a/backend/src/gosa/backend/data/templates/i18n/locality/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/locality/de.json
@@ -1,5 +1,7 @@
 {
+  "Description": null,
   "Generic": "Allgemein",
   "Locality": "Lokalität",
-  "Name": "Name" 
+  "Locality name": null,
+  "Name": "Name"
 }
