--- a/backend/src/gosa/backend/data/templates/i18n/organization/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/organization/de.json
@@ -1,5 +1,7 @@
 {
-  "Organization": "Organisation",
+  "Description": null,
   "Generic": "Allgemein",
-  "Name": "Name" 
+  "Name": "Name",
+  "Organization": "Organisation",
+  "Organization name": null
 }
