--- a/backend/src/gosa/backend/data/templates/i18n/organization/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/organization/en.json
@@ -1,5 +1,7 @@
 {
-  "Organization": null,
+  "Description": null,
   "Generic": null,
-  "Name": null
+  "Name": null,
+  "Organization": null,
+  "Organization name": null
 }
