--- a/backend/src/gosa/backend/data/templates/i18n/trustaccount/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/trustaccount/en.json
@@ -1,8 +1,8 @@
 {
-  "Trust settings": null,
   "Description": null,
-  "Name": null,
-  "Mode": null,
   "Edit trusted hosts": null,
-  "Trust account": null
+  "Mode": null,
+  "Name": null,
+  "Trust account": null,
+  "Trust settings": null
 }
