--- a/backend/src/gosa/backend/data/templates/i18n/user-organizational/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-organizational/de.json
@@ -1,22 +1,23 @@
 {
-  "Mobile phone": "Mobiltelefon",
-  "Choose a manager": "Verwalter auswählen",
-  "Fax": "FAX",
-  "Room no.": "Zimmernr.",
-  "Phone": "Telefon",
-  "Manager": "Verwalter",
   "Address": "Adresse",
-  "Organization": "Organisation",
-  "Employee no.": "Angestellten-Nr.",
-  "Deparment no.": "Abteilungsnur.",
-  "Organizational information": "Organisatorische-Informationen",
+  "Choose a manager": "Verwalter auswählen",
   "Contact information": "Kontakt-Informationen",
-  "State": "Bundesland",
-  "Organizational": "Organisation",
-  "Unit": "Einheit",
-  "Login ID": "Anmelde ID",
+  "Deparment no.": "Abteilungsnur.",
+  "Department no.": null,
+  "Employee no.": "Angestellten-Nr.",
   "Employee type": "Mitarbeiter-Typ",
-  "Pager": "Pager",
+  "Fax": "FAX",
   "Location": "Ort",
-  "Name": "Name" 
+  "Login ID": "Anmelde ID",
+  "Manager": "Verwalter",
+  "Mobile phone": "Mobiltelefon",
+  "Name": "Name",
+  "Organization": "Organisation",
+  "Organizational": "Organisation",
+  "Organizational information": "Organisatorische-Informationen",
+  "Pager": "Pager",
+  "Phone": "Telefon",
+  "Room no.": "Zimmernr.",
+  "State": "Bundesland",
+  "Unit": "Einheit"
 }
