--- a/backend/src/gosa/backend/data/templates/i18n/user-organizational/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-organizational/en.json
@@ -1,22 +1,23 @@
 {
-  "Mobile phone": null,
-  "Choose a manager": null,
-  "Fax": null,
-  "Room no.": null,
-  "Phone": null,
-  "Manager": null,
   "Address": null,
-  "Organization": null,
-  "Employee no.": null,
-  "Deparment no.": null,
-  "Organizational information": null,
+  "Choose a manager": null,
   "Contact information": null,
-  "State": null,
-  "Organizational": null,
-  "Unit": null,
-  "Login ID": null,
+  "Deparment no.": null,
+  "Department no.": null,
+  "Employee no.": null,
   "Employee type": null,
-  "Pager": null,
+  "Fax": null,
   "Location": null,
-  "Name": null
+  "Login ID": null,
+  "Manager": null,
+  "Mobile phone": null,
+  "Name": null,
+  "Organization": null,
+  "Organizational": null,
+  "Organizational information": null,
+  "Pager": null,
+  "Phone": null,
+  "Room no.": null,
+  "State": null,
+  "Unit": null
 }
