--- a/backend/src/gosa/backend/data/templates/i18n/user-samba-ts/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-samba-ts/de.json
@@ -1,20 +1,20 @@
 {
+  "Allow login on terminal server": "Anmeldung am Terminalserver zulassen",
   "Connect client drives at log on": "Client-Laufwerke beim Anmelden verbinden",
   "Connect client printer at log on": "Client-Drucker beim Anmelden verbinden",
-  "Disconnection time": "Trennzeitbeschränkung",
-  "Generic": "Allgemein",
-  "Inherit client configuration": "Client-Konfiguration übernehmen",
-  "Reconnect if disconnected": "Wiederherstellen falls unterbrochen",
-  "Initial program": "Startprogramm",
+  "Connection": "Verbindung",
   "Connection time limit": "Verbindungzeitbeschränkung",
   "Default to main client printer": "Standard-Drucker vom Client wählen",
-  "Allow login on terminal server": "Anmeldung am Terminalserver zulassen",
-  "Connection": "Verbindung",
-  "On broken or timed out": "Bei Trennung oder abgelaufenem Zeitlimit",
+  "Disconnection time": "Trennzeitbeschränkung",
+  "Generic": "Allgemein",
   "Home directory": "Benutzerverzeichnis",
-  "Working directory": "Arbeitsverzeichnis",
-  "Profile path": "Profil-Pfad",
-  "Samba terminal server": "Samba-Terminalserver",
   "IDLE time limit": "Leerlaufzeitbeschränkung",
-  "Shadowing": "Spiegeln" 
+  "Inherit client configuration": "Client-Konfiguration übernehmen",
+  "Initial program": "Startprogramm",
+  "On broken or timed out": "Bei Trennung oder abgelaufenem Zeitlimit",
+  "Profile path": "Profil-Pfad",
+  "Reconnect if disconnected": "Wiederherstellen falls unterbrochen",
+  "Samba terminal server": "Samba-Terminalserver",
+  "Shadowing": "Spiegeln",
+  "Working directory": "Arbeitsverzeichnis"
 }
