--- a/backend/src/gosa/backend/data/templates/i18n/user-samba-ts/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-samba-ts/en.json
@@ -1,20 +1,20 @@
 {
+  "Allow login on terminal server": null,
   "Connect client drives at log on": null,
   "Connect client printer at log on": null,
-  "Disconnection time": null,
-  "Generic": null,
-  "Inherit client configuration": null,
-  "Reconnect if disconnected": null,
-  "Initial program": null,
+  "Connection": null,
   "Connection time limit": null,
   "Default to main client printer": null,
-  "Allow login on terminal server": null,
-  "Connection": null,
-  "On broken or timed out": null,
+  "Disconnection time": null,
+  "Generic": null,
   "Home directory": null,
-  "Working directory": null,
-  "Profile path": null,
-  "Samba terminal server": null,
   "IDLE time limit": null,
-  "Shadowing": null
+  "Inherit client configuration": null,
+  "Initial program": null,
+  "On broken or timed out": null,
+  "Profile path": null,
+  "Reconnect if disconnected": null,
+  "Samba terminal server": null,
+  "Shadowing": null,
+  "Working directory": null
 }
