--- a/backend/src/gosa/backend/data/templates/i18n/user-samba/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-samba/en.json
@@ -1,27 +1,29 @@
 {
+  "Access options": null,
+  "Change samba password...": null,
+  "Choose the primary group": null,
   "Common": null,
   "Date and time when the user should be logged of the workstation": null,
-  "Failed login attempts": null,
   "Date of last failed login": null,
-  "Access options": null,
-  "SID": null,
+  "Description": null,
+  "Domain": null,
+  "Failed login attempts": null,
   "Forced logoff time": null,
   "Home directory": null,
-  "Choose the primary group": null,
-  "Profile path": null,
-  "Domain": null,
-  "Number of failed login attempts": null,
-  "Last logout": null,
   "Last login": null,
-  "Show policy": null,
+  "Last logout": null,
   "Last password change": null,
-  "Logon script": null,
-  "User workstations": null,
-  "Logon hours": null,
-  "Password change required after": null,
-  "Description": null,
   "Login options": null,
+  "Logon hours": null,
+  "Logon script": null,
+  "Name": null,
+  "Number of failed login attempts": null,
+  "Password change allowed after": null,
+  "Password change required after": null,
   "Primary group": null,
+  "Profile path": null,
+  "SID": null,
   "Samba": null,
-  "Name": null
+  "Show policy": null,
+  "User workstations": null
 }
