--- a/backend/src/gosa/backend/data/templates/i18n/user-zarafa/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-zarafa/de.json
@@ -1,29 +1,29 @@
 {
-  "Vacation settings active": "Urlaubseinstellungen aktivieren",
+  "Alternate address": "Alternative Adressen",
+  "Archive servers": "Archivserver",
+  "Away message": "Abwesenheitsnachricht",
+  "Enable IMAP": "IMAP aktivieren",
+  "Enable POP3": "POP3 aktivieren",
+  "Enable Z-Push": "Z-Push aktivieren",
+  "Forwarding address": "Weiterleitungen",
+  "General settings": "Allgemeine Einstellungen",
+  "Hard quota (in MB)": "Hard Quota (in MB)",
+  "Hide from address book": "Nicht im Adressbuch anzeigen",
+  "Mail address": "E-Mail-Adresse",
+  "Other settings": "Sonstige Einstellungen",
   "Override quotas": "Quota-Einstellungen überschreiben",
-  "Start": "Beginn",
+  "Quota": null,
+  "Resource capacity": "Ressourcen-Kapazität",
   "Send-as privilege": "'Senden als'-Privileg",
   "Soft quota (in MB)": "Soft Quota (in MB)",
-  "Quota": null,
-  "Enable POP3": "POP3 aktivieren",
-  "Alternate address": "Alternative Adressen",
-  "Other settings": "Sonstige Einstellungen",
-  "Warning quota (in MB)": "Quota-Warnung (in MB)",
-  "Use only shared store": "Nur gemeinsam genutzten Speicher verwenden",
-  "Hard quota (in MB)": "Hard Quota (in MB)",
-  "Mail address": "E-Mail-Adresse",
-  "Resource capacity": "Ressourcen-Kapazität",
-  "User has admin privileges": "Benutzer hat Administrationsrechte",
-  "Zarafa resource type": "Zarafa-Ressourcentyp",
-  "Away message": "Abwesenheitsnachricht",
-  "General settings": "Allgemeine Einstellungen",
+  "Start": "Beginn",
   "Stop": "Ende",
-  "Vacation": "Urlaub",
-  "Hide from address book": "Nicht im Adressbuch anzeigen",
-  "Forwarding address": "Weiterleitungen",
+  "Use only shared store": "Nur gemeinsam genutzten Speicher verwenden",
+  "User has admin privileges": "Benutzer hat Administrationsrechte",
   "User server": "Benutzer-Server",
-  "Enable IMAP": "IMAP aktivieren",
+  "Vacation": "Urlaub",
+  "Vacation settings active": "Urlaubseinstellungen aktivieren",
   "Visible": "Sichtbar",
-  "Enable Z-Push": "Z-Push aktivieren",
-  "Archive servers": "Archivserver"
+  "Warning quota (in MB)": "Quota-Warnung (in MB)",
+  "Zarafa resource type": "Zarafa-Ressourcentyp"
 }
