--- a/backend/src/gosa/backend/data/templates/i18n/user/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user/de.json
@@ -1,17 +1,26 @@
 {
-  "Please provide your web page here": "Bitte geben Sie hier die Adresse Ihrer Internetseite an",
-  "Surname": "Nachname",
-  "Personal": "Persönlich",
+  "Access rights": null,
   "Address": "Adresse",
-  "Homepage": "Internetseite",
-  "Title": "Titel",
-  "Given name": "Vorname",
-  "Phone": "Telefon",
+  "Administrator": null,
   "Automatic display name": "Automatischer angezeigter Name",
-  "Preferred language": "Bevorzugte Sprache",
-  "Login information": "Anmelde-Information",
+  "Change 2FA method...": null,
+  "Change password...": null,
   "Contact information": "Kontakt-Information",
   "Display name": "Anzeigename",
-  "User": "Benutzer",
-  "Login &ID": "Anmelde &ID"
+  "Given name": "Vorname",
+  "Homepage": "Internetseite",
+  "Lock account": null,
+  "Login &ID": "Anmelde &ID",
+  "Login information": "Anmelde-Information",
+  "Personal": "Persönlich",
+  "Phone": "Telefon",
+  "Please provide your web page here": "Bitte geben Sie hier die Adresse Ihrer Internetseite an",
+  "Preferred language": "Bevorzugte Sprache",
+  "Self service": null,
+  "Send message...": null,
+  "Setup password recovery": null,
+  "Surname": "Nachname",
+  "Title": "Titel",
+  "Unlock account": null,
+  "User": "Benutzer"
 }
