--- a/backend/src/gosa/backend/data/templates/i18n/user/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user/en.json
@@ -1,17 +1,26 @@
 {
-  "Please provide your web page here": null,
-  "Surname": null,
-  "Personal": null,
+  "Access rights": null,
   "Address": null,
-  "Homepage": null,
-  "Title": null,
-  "Given name": null,
-  "Phone": null,
+  "Administrator": null,
   "Automatic display name": null,
-  "Preferred language": null,
-  "Login information": null,
+  "Change 2FA method...": null,
+  "Change password...": null,
   "Contact information": null,
   "Display name": null,
-  "User": null,
-  "Login &ID": null
+  "Given name": null,
+  "Homepage": null,
+  "Lock account": null,
+  "Login &ID": null,
+  "Login information": null,
+  "Personal": null,
+  "Phone": null,
+  "Please provide your web page here": null,
+  "Preferred language": null,
+  "Self service": null,
+  "Send message...": null,
+  "Setup password recovery": null,
+  "Surname": null,
+  "Title": null,
+  "Unlock account": null,
+  "User": null
 }
