--- a/backend/src/gosa/backend/data/templates/i18n/group-samba/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/group-samba/en.json
@@ -1,12 +1,12 @@
 {
   "Description": null,
-  "Edit nested groups": null,
-  "Group type": null,
-  "Samba": null,
-  "Domain": null,
-  "Generic": null,
-  "Nested groups": null,
   "Display name": null,
+  "Domain": null,
+  "Edit nested groups": null,
+  "Generic": null,
+  "Group type": null,
+  "Name": null,
+  "Nested groups": null,
   "SID": null,
-  "Name": null
+  "Samba": null
 }
