--- a/backend/src/gosa/backend/data/templates/i18n/samba-ws/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/samba-ws/en.json
@@ -1,10 +1,14 @@
 {
   "Description": null,
-  "Windows Workstation": null,
-  "System ID": null,
   "Display Name": null,
+  "Display name": null,
   "Domain": null,
   "Generic": null,
   "Machine Account": null,
-  "SID": null
+  "SID": null,
+  "Samba domain": null,
+  "System ID": null,
+  "Windows NT domain to which the user belongs": null,
+  "Windows Workstation": null,
+  "preferred name of a person to be used when displaying entries": null
 }
