--- a/backend/src/gosa/backend/data/templates/i18n/user-samba/de.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-samba/de.json
@@ -1,27 +1,29 @@
 {
+  "Access options": "Zugriffsoptionen",
+  "Change samba password...": null,
+  "Choose the primary group": "Primäre Gruppe wählen",
   "Common": "Gesamt",
   "Date and time when the user should be logged of the workstation": "Datum und Uhrzeit an denen der Benutzer nicht an dem Arbeitsplatz angemeldet sein sollte",
-  "Failed login attempts": "Fehlgeschlagene Anmeldeversuche",
   "Date of last failed login": "Letzte Fehlanmeldung",
-  "Access options": "Zugriffsoptionen",
-  "SID": "SID",
+  "Description": "Beschreibung",
+  "Domain": "Domäne",
+  "Failed login attempts": "Fehlgeschlagene Anmeldeversuche",
   "Forced logoff time": "Erzwungene Abmeldezeit",
   "Home directory": "Benutzerverzeichnis",
-  "Choose the primary group": "Primäre Gruppe wählen",
-  "Profile path": "Profil-Pfad",
-  "Domain": "Domäne",
-  "Number of failed login attempts": "Anzahl der Fehlanmeldungen",
-  "Last logout": "Letzte Abmeldung",
   "Last login": "Letzte Anmeldung",
-  "Show policy": "Richtlinie anzeigen",
+  "Last logout": "Letzte Abmeldung",
   "Last password change": "Letzte Passwortänderung",
-  "Logon script": "Anmeldeskript",
-  "User workstations": "Benutzerarbeitsstationen",
-  "Logon hours": "Anmeldezeiten",
-  "Password change required after": "Passwordänderung erforderlich nach",
-  "Description": "Beschreibung",
   "Login options": "Anmeldeoptionen",
+  "Logon hours": "Anmeldezeiten",
+  "Logon script": "Anmeldeskript",
+  "Name": "Name",
+  "Number of failed login attempts": "Anzahl der Fehlanmeldungen",
+  "Password change allowed after": null,
+  "Password change required after": "Passwordänderung erforderlich nach",
   "Primary group": "Primäre Gruppe",
+  "Profile path": "Profil-Pfad",
+  "SID": "SID",
   "Samba": "Samba",
-  "Name": "Name"
+  "Show policy": "Richtlinie anzeigen",
+  "User workstations": "Benutzerarbeitsstationen"
 }
