--- a/backend/src/gosa/backend/data/templates/i18n/user-shadow/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-shadow/en.json
@@ -1,15 +1,15 @@
 {
-  "Options": null,
-  "Minimum password age": null,
-  "Maximum password age": null,
-  "Password expires on": null,
-  "Specifices the minimum number of days required between password changes.": null,
-  "Last password modification": null,
-  "Specifies the maximum number of days the password is valid.": null,
   "Inactivity before account is disabled": null,
-  "Shadow": null,
+  "Last password modification": null,
+  "Maximum password age": null,
+  "Minimum password age": null,
+  "Options": null,
+  "Password expires on": null,
   "Password expiry": null,
+  "Shadow": null,
+  "Specifices the minimum number of days required between password changes.": null,
+  "Specifies the maximum number of days the password is valid.": null,
+  "Specifies the number of days before the password expires that the user is warned.": null,
   "Specifies the number of days of inactivity allowed for the specified user.": null,
-  "Warn berfore password expires": null,
-  "Specifies the number of days before the password expires that the user is warned.": null
+  "Warn berfore password expires": null
 }
