--- a/backend/src/gosa/backend/data/templates/i18n/user-zarafa/en.json
+++ b/backend/src/gosa/backend/data/templates/i18n/user-zarafa/en.json
@@ -1,29 +1,30 @@
 {
-  "Vacation settings active": null,
+  "Alternate address": null,
+  "Archive servers": null,
+  "Away message": null,
+  "Enable IMAP": null,
+  "Enable POP3": null,
+  "Enable Z-Push": null,
   "Enable quota handling": null,
-  "Start": null,
+  "Forwarding address": null,
+  "General settings": null,
+  "Hard quota (in MB)": null,
+  "Hide from address book": null,
+  "Mail address": null,
+  "Other settings": null,
+  "Override quotas": null,
+  "Quota": null,
+  "Resource capacity": null,
   "Send-as privilege": null,
   "Soft quota (in MB)": null,
-  "Quota": null,
-  "Enable POP3": null,
-  "Alternate address": null,
-  "Other settings": null,
-  "Warning quota (in MB)": null,
-  "Use only shared store": null,
-  "Hard quota (in MB)": null,
-  "Mail address": null,
-  "Resource capacity": null,
-  "User has admin privileges": null,
-  "Zarafa resource type": null,
-  "Away message": null,
-  "General settings": null,
+  "Start": null,
   "Stop": null,
-  "Vacation": null,
-  "Hide from address book": null,
-  "Forwarding address": null,
+  "Use only shared store": null,
+  "User has admin privileges": null,
   "User server": null,
-  "Enable IMAP": null,
+  "Vacation": null,
+  "Vacation settings active": null,
   "Visible": null,
-  "Enable Z-Push": null,
-  "Archive servers": null
+  "Warning quota (in MB)": null,
+  "Zarafa resource type": null
 }
