--- a/plugins/gui/src/gosa/plugins/gui/locale/de/LC_MESSAGES/messages.po
+++ b/plugins/gui/src/gosa/plugins/gui/locale/de/LC_MESSAGES/messages.po
@@ -8,15 +8,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gosa-plugin-gui 3.0\n"
 "Report-Msgid-Bugs-To: gosa@oss.gonicus.de\n"
-"POT-Creation-Date: 2018-01-16 09:54+0100\n"
+"POT-Creation-Date: 2018-01-16 12:41+0100\n"
 "PO-Revision-Date: 2018-01-16 10:44+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language: de\n"
 "Language-Team: de <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 1.3\n"
+"Generated-By: Babel 2.5.3\n"
 
 #: src/gosa/plugins/gui/main.py:76
 msgid "Returns manifest informations from all uploaded dashboard widgets."
